--- a/homepage/website04/assets/main.css
+++ b/homepage/website04/assets/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
 :root {
-  --cyan: hsl(176, 50%, 47%);
+  --cyan: #3cb4ac;
   --dark-cyan: hsl(176, 72%, 28%);
   --dark: #000000;
   --gray: #eeeeee;
@@ -86,47 +86,27 @@ body {
   left: calc(50% - 27px);
 }
 
-.box > .buttons > a:last-of-type {
-  position: relative;
-  outline: none;
-  border: none;
-  padding-left: 20px;
-}
-
-.box > .buttons > a:last-of-type::before {
-  content: "";
-  background: url(../images/icon-bookmark.svg) no-repeat;
-  background-size: 100%;
-  width: var(--icon-size);
-  height: var(--icon-size);
-  position: absolute;
-  left: -20px;
-}
-
-.box > .buttons > a:last-of-type::focus {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
 .box:nth-of-type(2) > .row > div:nth-of-type(2) {
   position: relative;
 }
 
 .box:nth-of-type(2) > .row > div:nth-of-type(2)::before, .box:nth-of-type(2) > .row > div:nth-of-type(2)::after {
   content: "";
-  height: 80%;
-  width: 2px;
+  height: 2px;
+  width: 25%;
   background: #eee;
   position: absolute;
-  top: 10px;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 .box:nth-of-type(2) > .row > div:nth-of-type(2):before {
-  left: -4vh;
+  top: -10px;
 }
 
 .box:nth-of-type(2) > .row > div:nth-of-type(2)::after {
-  right: 4vh;
+  bottom: -20px;
 }
 
 .box:nth-of-type(2) .process {
@@ -162,6 +142,56 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.box > .buttons > a:last-of-type {
+  position: relative;
+  outline: none;
+  border: none;
+  padding-left: 20px;
+  background-color: #eeeeee;
+  color: var(--dark-gray);
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  width: 150px;
+}
+
+.box > .buttons > a:last-of-type.booked {
+  width: 172px;
+}
+
+.box > .buttons > a:last-of-type.booked svg circle {
+  fill: var(--cyan);
+}
+
+.box > .buttons > a:last-of-type.booked svg path {
+  fill: #ffffff;
+}
+
+.box > .buttons > a:last-of-type svg {
+  position: absolute;
+  left: -14px;
+}
+
+.box > .buttons > a:last-of-type::focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+@media (min-width: 768px) {
+  .box:nth-of-type(2) > .row > div:nth-of-type(2)::before, .box:nth-of-type(2) > .row > div:nth-of-type(2)::after {
+    height: 80%;
+    width: 2px;
+    top: 10px;
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px);
+  }
+  .box:nth-of-type(2) > .row > div:nth-of-type(2):before {
+    left: -45px;
+  }
+  .box:nth-of-type(2) > .row > div:nth-of-type(2)::after {
+    left: 200px;
+  }
 }
 
 @media (min-width: 576px) {
