--- a/homepage/website04/assets/main.scss
+++ b/homepage/website04/assets/main.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
 
 :root {
-  --cyan: hsl(176, 50%, 47%);
+  --cyan: #3cb4ac;
   --dark-cyan: hsl(176, 72%, 28%);
   --dark: #000000;
   --gray: #eeeeee;
@@ -83,27 +83,6 @@ body {
     }
   }
 
-  & > .buttons > a:last-of-type {
-    position: relative;
-    outline: none;
-    border: none;
-    padding-left:20px;
-
-    &::before {
-      content: "";
-      background: url(../images/icon-bookmark.svg) no-repeat;
-      background-size: 100%;
-      width: var(--icon-size);
-      height: var(--icon-size);
-      position: absolute;
-      left: -20px;
-    }
-
-    &::focus {
-      box-shadow:none;
-    }
-  }
-
   &:nth-of-type(2) {
     & > .row > div:nth-of-type(2) {
       position: relative;
@@ -111,19 +90,20 @@ body {
       &::before,
       &::after {
         content: "";
-        height: 80%;
-        width: 2px;
+        height: 2px;
+        width: 25%;
         background: #eee;
         position: absolute;
-        top: 10px;
+        left: 50%;
+        transform: translate(-50%, 0);
       }
 
       &:before {
-        left: -4vh;
+        top: -10px;
       }
 
       &::after {
-        right: 4vh;
+        bottom: -20px;
       }
     }
 
@@ -161,6 +141,63 @@ body {
         position: absolute;
         top: 0;
         left: 0;
+      }
+    }
+  }
+
+  & > .buttons > a:last-of-type {
+    position: relative;
+    outline: none;
+    border: none;
+    padding-left: 20px;
+    background-color: #eeeeee;
+    color: var(--dark-gray);
+    transition: 0.25s;
+    width:150px;
+
+    &.booked {
+      width:172px;
+
+      svg circle {
+        fill: var(--cyan);
+      }
+  
+      svg path {
+        fill: #ffffff;
+      }
+    }
+
+    svg {
+      position: absolute;
+      left: -14px;
+    }
+
+    &::focus {
+      box-shadow: none;
+    }
+  }
+
+}
+
+@media (min-width: 768px) {
+  .box {
+    &:nth-of-type(2) {
+      & > .row > div:nth-of-type(2) {
+        &::before,
+        &::after {
+          height: 80%;
+          width: 2px;
+          top: 10px;
+          transform: translate(0px, 0px);
+        }
+
+        &:before {
+          left: -45px;
+        }
+
+        &::after {
+          left: 200px;
+        }
       }
     }
   }
