--- a/homepage/component/four-card-feature-section-master/styles/main.css
+++ b/homepage/component/four-card-feature-section-master/styles/main.css
@@ -2,9 +2,11 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 :root {
   --primary-red: hsl(0, 78%, 62%);
@@ -13,45 +15,63 @@
   --primary-blue: hsl(212, 86%, 64%);
   --very-dark-blue: hsl(234, 12%, 34%);
   --grayish-blue: hsl(229, 6%, 66%);
-  --light-gray: hsl(0, 0%, 98%); }
+  --light-gray: hsl(0, 0%, 98%);
+}
 
 body {
   font-family: "Poppins", sans-serif;
   font-size: 15px;
-  background-color: var(--light-gray); }
+  background-color: var(--light-gray);
+}
 
 main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 100vh;
-  gap: 4rem; }
+  gap: 4rem;
+}
 
 .headings {
   max-width: 32rem;
   text-align: center;
-  margin-top: 5rem; }
+  margin-top: 5rem;
+}
 
 .heading-primary {
   font-weight: 200;
   font-size: 2.2rem;
-  color: var(--very-dark-blue); }
+  color: var(--very-dark-blue);
+}
 
 .heading-secondary {
   font-size: 2.2rem;
-  color: var(--very-dark-blue); }
+  color: var(--very-dark-blue);
+}
 
 .heading-teritery {
-  color: var(--grayish-blue); }
+  color: var(--grayish-blue);
+}
 
 .container {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[4];
+      grid-template-rows: repeat(4, 1fr);
   max-width: 1200px;
   gap: 2rem;
   width: 100%;
-  grid-template-areas: ".  b  ." "a  b  d" "a  c  d" ".  c  ."; }
+      grid-template-areas: ".  b  ." "a  b  d" "a  c  d" ".  c  .";
+}
 
 .card {
   position: relative;
@@ -60,60 +80,113 @@ main {
   height: 18rem;
   padding: 2rem 3rem;
   background-color: #fff;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  gap: 10px; }
-  .card::before {
-    content: "";
-    width: 100%;
-    height: 5px;
-    position: absolute;
-    top: 0;
-    left: 0; }
-  .card:nth-child(1) {
-    grid-area: a; }
-    .card:nth-child(1)::before {
-      background-color: var(--primary-cyan); }
-  .card:nth-child(2) {
-    grid-area: b; }
-    .card:nth-child(2)::before {
-      background-color: var(--primary-red); }
-  .card:nth-child(3) {
-    grid-area: c; }
-    .card:nth-child(3)::before {
-      background-color: var(--primary-orange); }
-  .card:nth-child(4) {
-    grid-area: d; }
-    .card:nth-child(4)::before {
-      background-color: var(--primary-blue); }
-  .card-content {
-    color: var(--grayish-blue); }
-  .card-pic {
-    width: 4rem;
-    margin-top: auto;
-    margin-left: auto; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+.card::before {
+  content: "";
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.card:nth-child(1) {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: a;
+}
+
+.card:nth-child(1)::before {
+  background-color: var(--primary-cyan);
+}
+
+.card:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  grid-area: b;
+}
+
+.card:nth-child(2)::before {
+  background-color: var(--primary-red);
+}
+
+.card:nth-child(3) {
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  grid-area: c;
+}
+
+.card:nth-child(3)::before {
+  background-color: var(--primary-orange);
+}
+
+.card:nth-child(4) {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 3;
+  grid-area: d;
+}
+
+.card:nth-child(4)::before {
+  background-color: var(--primary-blue);
+}
+
+.card-content {
+  color: var(--grayish-blue);
+}
+
+.card-pic {
+  width: 4rem;
+  margin-top: auto;
+  margin-left: auto;
+}
 
 @media (max-width: 1240px) {
   .container {
-    grid-template-columns: 1fr;
-    grid-template-areas: "a" "b" "c" "d"; }
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+        grid-template-areas: "a" "b" "c" "d";
+  }
   main {
-    gap: 5rem; }
+    gap: 5rem;
+  }
   .headings {
-    max-width: 330px; }
+    max-width: 330px;
+  }
   .heading-primary,
   .heading-secondary {
-    font-size: 1.6rem; }
+    font-size: 1.6rem;
+  }
   .heading-secondary {
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+  }
   .heading-teritery {
-    font-size: 1rem; }
+    font-size: 1rem;
+  }
   .container {
-    gap: 1.8rem; }
+    gap: 1.8rem;
+  }
   .card {
-    justify-self: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
     max-width: 330px;
-    padding: 2rem; } }
+    padding: 2rem;
+  }
+}
+/*# sourceMappingURL=main.css.map */
