--- a/homepage/component/tip-calculator-app-main/styles/main.css
+++ b/homepage/component/tip-calculator-app-main/styles/main.css
@@ -7,49 +7,68 @@
   --light-grayish-cyan: #c5e4e7;
   --very-light-grayish-cyan: #f4fafa;
   --white-color: #ffffff;
-  --danger-color: rgb(201, 79, 14); }
+  --danger-color: rgb(201, 79, 14);
+}
 
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 
 html,
 body {
-  height: 100%; }
+  height: 100%;
+}
 
 body {
   font-family: "Space Mono", monospace;
-  background-color: var(--light-grayish-cyan); }
+  background-color: var(--light-grayish-cyan);
+}
 
 input,
 button {
-  font-family: inherit; }
+  font-family: inherit;
+}
 
 main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 100vh;
+}
 
 .input-label {
   display: block;
   font-size: 14px;
   font-weight: 700;
   color: var(--very-dark-cyan);
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+}
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  margin: 0; }
+  margin: 0;
+}
 
 /* Firefox */
 input[type="number"] {
-  -moz-appearance: textfield; }
+  -moz-appearance: textfield;
+}
 
 input {
   border-radius: 5px;
@@ -64,48 +83,71 @@ input {
   outline: 0;
   border: 2px solid transparent;
   font-family: inherit;
-  color: var(--very-dark-cyan); }
-  input:focus {
-    border-color: var(--primary-color); }
+  color: var(--very-dark-cyan);
+}
+
+input:focus {
+  border-color: var(--primary-color);
+}
 
 .logo {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem;
+}
 
 .calculator {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   gap: 40px;
   max-width: 800px;
   padding: 30px;
   background-color: var(--white-color);
   border-radius: 22px;
-  box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1); }
+  -webkit-box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.1);
+}
 
 .section-1,
 .section-2 {
-  flex-basis: 50%; }
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
 
 .section-1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  gap: 40px; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 40px;
+}
 
 .bill {
-  position: relative; }
-  .bill::before {
-    content: "";
-    background: url(../images/icon-dollar.svg) no-repeat;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    bottom: 10px;
-    left: 1rem; }
+  position: relative;
+}
+
+.bill::before {
+  content: "";
+  background: url(../images/icon-dollar.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  bottom: 10px;
+  left: 1rem;
+}
 
 .select-tip .selects {
   width: 100%;
+  display: -ms-grid;
   display: grid;
   gap: 0.7rem;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 40px; }
+  -ms-grid-columns: (1fr);
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: 40px;
+      grid-template-rows: 40px;
+}
 
 .select-tip .tip-btn {
   border: 0;
@@ -114,66 +156,104 @@ input {
   border-radius: 8px;
   font-size: 24px;
   font-weight: 700;
-  cursor: pointer; }
-  .select-tip .tip-btn:hover {
-    background-color: var(--light-grayish-cyan);
-    color: var(--very-dark-cyan); }
-  .select-tip .tip-btn.active {
-    background-color: var(--primary-color);
-    color: var(--very-dark-cyan); }
+  cursor: pointer;
+}
+
+.select-tip .tip-btn:hover {
+  background-color: var(--light-grayish-cyan);
+  color: var(--very-dark-cyan);
+}
+
+.select-tip .tip-btn.active {
+  background-color: var(--primary-color);
+  color: var(--very-dark-cyan);
+}
 
 .select-tip input {
-  padding: 0 6px 0 0; }
+  padding: 0 6px 0 0;
+}
 
 .number-of-people {
-  position: relative; }
-  .number-of-people::before {
-    content: "";
-    background: url(../images/icon-person.svg) no-repeat;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    bottom: 10px;
-    left: 1rem; }
-  .number-of-people .error-message {
-    display: none; }
-  .number-of-people.error input {
-    border-color: var(--danger-color); }
-  .number-of-people.error .error-message {
-    font-size: 14px;
-    font-weight: 700;
-    color: var(--danger-color);
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: block; }
+  position: relative;
+}
+
+.number-of-people::before {
+  content: "";
+  background: url(../images/icon-person.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  bottom: 10px;
+  left: 1rem;
+}
+
+.number-of-people .error-message {
+  display: none;
+}
+
+.number-of-people.error input {
+  border-color: var(--danger-color);
+}
+
+.number-of-people.error .error-message {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--danger-color);
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+}
 
 .section-2 {
   background: var(--very-dark-cyan);
   border-radius: 12px;
-  padding: 40px 20px 30px 20px; }
+  padding: 40px 20px 30px 20px;
+}
 
 .result {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between; }
-  .result-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-  .result-heading {
-    color: var(--white-color);
-    font-size: 14px;
-    font-weight: 700; }
-    .result-heading span {
-      display: block;
-      font-size: 12px;
-      color: var(--dark-grayish-cyan); }
-  .result-amount {
-    font-size: 36px;
-    font-weight: 700;
-    color: var(--primary-color); }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.result-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.result-heading {
+  color: var(--white-color);
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.result-heading span {
+  display: block;
+  font-size: 12px;
+  color: var(--dark-grayish-cyan);
+}
+
+.result-amount {
+  font-size: 36px;
+  font-weight: 700;
+  color: var(--primary-color);
+}
 
 .reset-btn {
   width: 95%;
@@ -187,21 +267,38 @@ input {
   cursor: pointer;
   color: var(--very-dark-cyan);
   text-align: center;
-  margin: 0 auto; }
-  .reset-btn:hover {
-    background-color: var(--light-grayish-cyan); }
+  margin: 0 auto;
+}
 
-@media (max-width: 1440px) {
+.reset-btn:hover {
+  background-color: var(--light-grayish-cyan);
+}
+
+@media (max-width: 700px) {
+  .logo {
+    margin: 4rem 0;
+  }
   .calculator {
-    flex-direction: column;
-    max-width: 400px; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 400px;
+  }
   .section-2 {
     min-height: 250px;
     padding: 30px 20px 20px 20px;
-    height: 100%; }
+    height: 100%;
+  }
   .result {
-    min-height: 200px; }
+    min-height: 200px;
+  }
   .select-tip .selects {
-    grid-template-columns: repeat(2, 1fr);
+    -ms-grid-columns: (1fr);
+        grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
-    grid-template-rows: repeat(3, 40px); } }
+    -ms-grid-rows: (40px);
+        grid-template-rows: repeat(3, 40px);
+  }
+}
+/*# sourceMappingURL=main.css.map */
