--- a/homepage/component/tip-calculator-app-main/styles/main.scss
+++ b/homepage/component/tip-calculator-app-main/styles/main.scss
@@ -242,7 +242,11 @@ input {
   }
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 700px) {
+  .logo {
+    margin: 4rem
+  }
+
   .calculator {
     flex-direction: column;
     max-width: 400px;
