--- a/frontendmentor/sunnyside-agency-landing-page-main/style.css
+++ b/frontendmentor/sunnyside-agency-landing-page-main/style.css
@@ -1,370 +1,684 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600;700&family=Fraunces:wght@700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700&family=Fraunces:wght@700;900&display=swap");
 
 :root {
-  --red: hsl(7, 99%, 70%);
-  --yellow: rgb(250, 212, 0);
-  --gray: hsl(210, 4%, 67%);
-  --blue-1: hsl(213, 9%, 39%);
-  --blue-2: hsl(232, 10%, 55%);
-  --blue-3: #19536b;
-  --blue-4: hsl(212, 27%, 19%);
-  --cyan: hsl(167, 40%, 24%);
-  --light-cyan: rgb(69, 140, 126);
-  --footer-bg: rgba(144, 212, 197, 255);
+	--red: hsl(7, 99%, 70%);
+	--yellow: rgb(250, 212, 0);
+	--gray: hsl(210, 4%, 67%);
+	--blue-1: hsl(213, 9%, 39%);
+	--blue-2: hsl(232, 10%, 55%);
+	--blue-3: #19536b;
+	--blue-4: hsl(212, 27%, 19%);
+	--cyan: hsl(167, 40%, 24%);
+	--light-cyan: #458c7e;
+	--footer-bg: rgba(144, 212, 197, 255);
 }
 
 html,
 body {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-  padding: 0;
-  margin: 0;
+	box-sizing: inherit;
+	padding: 0;
+	margin: 0;
 }
 
 body {
-  box-sizing: border-box;
-  font-family: "Barlow", sans-serif;
-  background: #fffbf8;
+	box-sizing: border-box;
+	font-family: "Barlow", sans-serif;
+	background: #fffbf8;
+	overflow-x: hidden;
 }
 
 /* header section */
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 30px 5vw;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 1;
-  color: #fff;
-  transition: 150ms;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 30px 5vw;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 1;
+	color: #fff;
+	background: transparent;
+	transition: 150ms;
+	box-shadow: none;
+	z-index: 2;
+}
+
+.header.active {
+	color: var(--blue-4);
+	background: #fff;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
 }
 
 .header-brand {
-  font-size: 26px;
+	font-size: 28px;
+	font-weight: 900;
+}
+
+.mobile-nav {
+	display: none;
 }
 
 .header-navigation {
-  display: flex;
-  align-items: center;
-  gap: 4vw;
-  list-style-type: none;
+	display: flex;
+	align-items: center;
+	gap: 3.7vw;
+	list-style-type: none;
+	font-size: 15px;
 }
 
 .navigation-item {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 .cta-button {
-  padding: 10px 20px;
-  border-radius: 50px;
-  font-family: "Fraunces", serif;
-  background: #fff;
-  color: var(--blue-3);
-  transition: 200ms;
+	padding: 11px 21px;
+	border-radius: 50px;
+	font-family: "Fraunces", serif;
+	background: #fff;
+	color: var(--blue-3);
+	transition: 200ms;
+	text-transform: uppercase;
+}
+
+.cta-button:hover {
+	background: #6eceff;
+	color: #fff;
+}
+
+.cta-button.active {
+	background: #3dbeff;
+	color: #fff;
+	box-shadow: 0px 2px 5px rgb(0, 0, 0, 0.2);
 }
 
 /* hero section */
 .hero {
-  height: 100vh;
-  background-image: url("./images/desktop/image-header.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  position: relative;
+	height: 100vh;
+	background-image: url("./images/desktop/image-header.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	position: relative;
 }
 
 .hero-heading {
-  position: absolute;
-  top: 30%;
-  width: 100%;
-  text-align: center;
-  color: #fff;
-  font-size: 50px;
-  font-family: "Fraunces", serif;
-  letter-spacing: 6px;
-  text-transform: uppercase;
+	position: absolute;
+	top: 30%;
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	font-size: 50px;
+	font-family: "Fraunces", serif;
+	letter-spacing: 6px;
+	text-transform: uppercase;
 }
 
 .hero-arrow {
-  position: absolute;
-  top: 46%;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: updown 500ms infinite alternate;
-  cursor: pointer;
+	position: absolute;
+	top: 46%;
+	left: 50%;
+	transform: translateX(-50%);
+	animation: updown 500ms infinite alternate;
+	cursor: pointer;
 }
 
 /* feature section */
 .feature {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 }
 
 .feature-item {
-  height: calc(100vw * 0.45);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+	height: calc(100vw * 0.45);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
 }
 
 .feature-item:nth-child(2) {
-  background-image: url("./images/desktop/image-transform.jpg");
+	background-image: url("./images/desktop/image-transform.jpg");
 }
 
 .feature-item:nth-child(3) {
-  background-image: url("./images/desktop/image-stand-out.jpg");
+	background-image: url("./images/desktop/image-stand-out.jpg");
 }
 
 .feature-item:nth-child(5) {
-  background-image: url("./images/desktop/image-graphic-design.jpg");
+	background-image: url("./images/desktop/image-graphic-design.jpg");
 }
 
 .feature-item:nth-child(6) {
-  background-image: url("./images/desktop/image-photography.jpg");
+	background-image: url("./images/desktop/image-photography.jpg");
 }
 
 .feature-item__text {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .feature-item__text div {
-  width: 60%;
-  max-width: 363px;
+	max-width: 30vw;
 }
 
 .feature-item__text h2 {
-  font-family: "Fraunces", serif;
-  color: var(--blue-4);
-  font-weight: 900;
-  font-size: 3.5vh;
-  margin-bottom: 20px;
-  line-height: 1.4;
+	font-family: "Fraunces", serif;
+	color: var(--blue-4);
+	font-weight: 900;
+	font-size: 2.7vw;
+	margin-bottom: 20px;
+	line-height: 1.4;
 }
 
 .feature-item__text h5 {
-  font-size: 14px;
-  color: var(--gray);
-  line-height: 1.6;
-  margin-bottom: 30px;
+	font-size: 1.15vw;
+	font-weight: 500;
+	color: var(--blue-2);
+	line-height: 1.6;
+	margin-bottom: 30px;
 }
 
 .feature-item__text button {
-  display: inline-block;
-  font-family: "Fraunces", serif;
-  text-transform: uppercase;
-  color: var(--blue-4);
-  font-weight: 900;
-  letter-spacing: 1px;
-  border: 0;
-  background: transparent;
-  position: relative;
-  cursor: pointer;
-  z-index: 1;
+	display: inline-block;
+	font-family: "Fraunces", serif;
+	text-transform: uppercase;
+	color: var(--blue-4);
+	font-weight: 900;
+	font-size: 1.1vw;
+	letter-spacing: 1px;
+	border: 0;
+	background: transparent;
+	position: relative;
+	cursor: pointer;
+	z-index: 1;
 }
 
 .feature-item__text button::after {
-  content: "";
-  width: 108%;
-  height: 8px;
-  opacity: 0.4;
-  position: absolute;
-  bottom: -1px;
-  left: -5px;
-  border-radius: 10px;
-  z-index: -1;
+	content: "";
+	width: 108%;
+	height: 8px;
+	opacity: 0.4;
+	position: absolute;
+	bottom: -1px;
+	left: -5px;
+	border-radius: 10px;
+	z-index: -1;
 }
 
 .feature-item:nth-child(1) button::after {
-  background: var(--yellow);
+	background: var(--yellow);
 }
 
 .feature-item:nth-child(4) button::after {
-  background: var(--red);
+	background: var(--red);
 }
 
 .feature-item__text button:hover::after {
-  opacity: 1;
+	opacity: 1;
 }
 
 .feature-item__mix {
-  position: relative;
+	position: relative;
 }
 
 .feature-item__mix div {
-  position: absolute;
-  bottom: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
+	position: absolute;
+	bottom: 10%;
+	left: 50%;
+	transform: translateX(-50%);
+	text-align: center;
 }
 
 .feature-item__mix h3 {
-  color: var(--cyan);
-  font-size: 26px;
-  font-family: "Fraunces", serif;
-  font-weight: 900;
-  margin-bottom: 26px;
+	color: var(--cyan);
+	font-size: 2.1vw;
+	font-family: "Fraunces", serif;
+	font-weight: 900;
+	margin-bottom: 1.8vw;
 }
 
 .feature-item__mix h5 {
-  line-height: 1.7;
-  max-width: 280px;
-  color: var(--light-cyan);
+	line-height: 1.7;
+	color: var(--cyan);
+	font-size: 1.1vw;
+	font-weight: 600;
 }
 
 /* testimonials section */
 .testimonials {
-  padding: 150px 0;
+	padding: 10vw 0;
 }
 
 .testimonials h3 {
-  text-align: center;
-  font-family: "Fraunces", serif;
-  letter-spacing: 3px;
-  color: var(--gray);
-  font-size: 24px;
-  margin-bottom: 60px;
+	text-align: center;
+	text-transform: uppercase;
+	font-family: "Fraunces", serif;
+	letter-spacing: 3px;
+	color: var(--gray);
+	font-size: 1.8vw;
+	margin-bottom: 5vw;
 }
 
 .testimonial-boxs {
-  display: grid;
-  grid-template-columns: repeat(3, 300px);
-  margin: auto;
-  justify-content: center;
-  gap: 20px;
+	display: grid;
+	grid-template-columns: repeat(3, 20vw);
+	margin: auto;
+	justify-content: center;
+	gap: 2vw;
 }
 
 .testimonial-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-  text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 4vw;
+	text-align: center;
 }
 
 .testimonial-box__pic {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+	width: 4vw;
+	height: 4vw;
+	border-radius: 50%;
 }
 
 .testimonial-box__content {
-  color: var(--blue-2);
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 1.7;
+	color: var(--blue-1);
+	font-weight: 500;
+	font-size: 1vw;
+	line-height: 1.7;
 }
 
 .testimonial-box__credit div {
-  font-family: "Fraunces", serif;
-  font-size: 15px;
-  font-weight: 900;
-  color: var(--blue-4);
+	font-family: "Fraunces", serif;
+	font-size: 1.1vw;
+	font-weight: 900;
+	color: var(--blue-4);
+	margin-bottom: 3px;
 }
 
 .testimonial-box__credit span {
-  font-size: 12px;
-  color: var(--gray);
+	font-size: 0.8vw;
+	color: var(--gray);
 }
 
 .dm {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 500px;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-template-rows: 500px;
 }
 
 .dm div {
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	transition: 200ms;
+}
+
+.dm div:hover {
+	transform: scale(1.05);
+	z-index: 1;
 }
 
 .dm div:nth-child(1) {
-  background-image: url(./images/desktop/image-gallery-milkbottles.jpg);
+	background-image: url(./images/desktop/image-gallery-milkbottles.jpg);
 }
 
 .dm div:nth-child(2) {
-  background-image: url(./images/desktop/image-gallery-orange.jpg);
+	background-image: url(./images/desktop/image-gallery-orange.jpg);
 }
 
 .dm div:nth-child(3) {
-  background-image: url(./images/desktop/image-gallery-cone.jpg);
+	background-image: url(./images/desktop/image-gallery-cone.jpg);
 }
 
 .dm div:nth-child(4) {
-  background-image: url(./images/desktop/image-gallery-sugarcubes.jpg);
+	background-image: url(./images/desktop/image-gallery-sugarcubes.jpg);
 }
 
 .footer {
-  background: var(--footer-bg);
-  padding: 80px 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+	background: var(--footer-bg);
+	padding: 4vw 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 .footer-heading {
-  color: var(--cyan);
-  font-weight: 700;
-  font-size: 30px;
-  margin-bottom: 30px;
+	color: var(--cyan);
+	font-weight: 700;
+	font-size: 2vw;
+	margin-bottom: 2.3vw;
 }
 
 .footer-nav {
-  color: var(--light-cyan);
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  font-size: 14px;
-  margin-bottom: 80px;
+	color: var(--light-cyan);
+	display: flex;
+	align-items: center;
+	gap: 3vw;
+	font-size: 1vw;
+	margin-bottom: 5vw;
 }
 
 .footer-nav__item {
-  color: inherit;
-  text-decoration: none;
-  transition: color 150ms;
+	color: inherit;
+	text-decoration: none;
+	transition: color 150ms;
 }
 
 .footer-nav__item:hover {
-  color: #fff;
+	color: #fff;
 }
 
 .social-media {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+	display: flex;
+	align-items: center;
+	gap: 1.4vw;
 }
 
 .social-link {
-  fill: #2c7566;
-  transition: fill 200ms;
+	fill: #2c7566;
+	transition: fill 200ms;
 }
 
 .social-link:hover {
-  fill: #fff;
+	fill: #fff;
+}
+
+@media (max-width: 980px) {
+	.header-brand {
+		font-size: 26px;
+	}
+
+	.hero-heading {
+		font-size: 40px;
+	}
+	.testimonial-boxs {
+		grid-template-columns: repeat(3, 28vw);
+	}
+
+	.testimonial-box__pic {
+		width: 6vw;
+		height: 6vw;
+	}
+
+	.feature-item__mix div {
+		max-width: 270px;
+		width: 100%;
+	}
+
+	.feature-item__mix h3 {
+		font-size: 23px;
+		margin-bottom: 20px;
+	}
+	.dm {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 50vw 50vw;
+	}
+}
+
+@media (max-width: 676px) {
+	.header-brand {
+		font-size: 22px;
+	}
+
+	.header-navigation {
+		display: none;
+	}
+
+	/* hamburger menu START */
+	.mobile-nav {
+		display: block;
+		position: relative;
+	}
+
+	.mobile-nav__button {
+		width: 22px;
+		height: 22px;
+		border: 0;
+		position: relative;
+		background: transparent;
+	}
+
+	.mobile-nav__button span {
+		width: 22px;
+		position: absolute;
+		height: 2px;
+		background: #fff;
+		left: 0;
+		transition: 200ms;
+		border-radius: 10px;
+		transition: 150ms;
+	}
+
+	.mobile-nav.scroll .mobile-nav__button span {
+		background: var(--blue-4);
+	}
+
+	.mobile-nav__button span:nth-child(1) {
+		top: 0px;
+		transform-origin: bottom left;
+	}
+
+	.mobile-nav__button span:nth-child(2) {
+		top: 8px;
+	}
+
+	.mobile-nav__button span:nth-child(3) {
+		top: 16px;
+		transform-origin: bottom left;
+	}
+
+	.mobile-nav.active .mobile-nav__button span:nth-child(1) {
+		transform: rotate(45deg);
+	}
+
+	.mobile-nav.active .mobile-nav__button span:nth-child(2) {
+		opacity: 0;
+	}
+
+	.mobile-nav.active .mobile-nav__button span:nth-child(3) {
+		transform: rotate(-45deg) translate(1.2px, 0.5px);
+	}
+
+	.mobile-nav .mobile-menu {
+		display: none;
+	}
+
+	.mobile-nav.active .mobile-menu {
+		position: absolute;
+		right: 0;
+		top: 70px;
+		width: 90vw;
+		background: #fff;
+		color: var(--blue-4);
+		padding: 5vh 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		gap: 30px;
+	}
+
+	.mobile-menu::before {
+		content: "";
+		height: 0;
+		width: 0;
+		border-top: 22px solid transparent;
+		border-right: 22px solid #fff;
+		transform: translateY(-100%);
+		position: absolute;
+		right: 0;
+		top: 0px;
+	}
+
+	.mobile-menu .navigation-item {
+		color: var(--blue-2);
+		font-size: 20px;
+	}
+
+	.mobile-menu .cta-button {
+		background: var(--yellow);
+		color: var(--blue-4);
+	}
+
+	/* hamburger menu END */
+	.hero {
+		background-image: url(./images/mobile/image-header.jpg);
+	}
+
+	.hero-heading {
+		font-size: 32px;
+	}
+
+	.feature {
+		grid-template-columns: 1fr;
+		grid-template-rows: 320px 450px 320px 450px repeat(2, 650px);
+	}
+
+	.feature-item {
+		height: auto;
+		padding: 20px 0;
+	}
+
+	.feature-item:nth-child(2) {
+		grid-row: 1 / 1;
+		background-image: url("./images/mobile/image-transform.jpg");
+	}
+
+	.feature-item:nth-child(3) {
+		background-image: url("./images/mobile/image-stand-out.jpg");
+	}
+
+	.feature-item:nth-child(5) {
+		background-image: url("./images/mobile/image-graphic-design.jpg");
+	}
+
+	.feature-item:nth-child(6) {
+		background-image: url("./images/mobile/image-photography.jpg");
+	}
+
+	.feature-item__text div {
+		max-width: 76%;
+		text-align: center;
+	}
+
+	.feature-item__text h2 {
+		font-size: 30px;
+		margin-bottom: 20px;
+	}
+
+	.feature-item__text h5 {
+		font-size: 16px;
+		margin-bottom: 30px;
+		font-weight: 500;
+	}
+
+	.feature-item__text button {
+		font-size: 16px;
+	}
+
+	.feature-item__mix div {
+		width: 90%;
+	}
+
+	.feature-item__mix h3 {
+		font-size: 28px;
+		margin-bottom: 20px;
+	}
+
+	.feature-item__mix h5 {
+		line-height: 1.7;
+		max-width: 100%;
+		font-size: 16px;
+	}
+
+	.testimonial-boxs {
+		grid-template-columns: 300px;
+		grid-template-rows: repeat(3, 1fr);
+		gap: 40px;
+	}
+
+	.testimonials h3 {
+		letter-spacing: 3px;
+		font-size: 18px;
+		margin-bottom: 36px;
+	}
+
+	.testimonial-box__pic {
+		width: 50px;
+		height: 50px;
+	}
+
+	.testimonial-box__content {
+		font-size: 17px;
+	}
+
+	.testimonial-box__credit div {
+		font-size: 18px;
+		margin-bottom: 8px;
+	}
+
+	.testimonial-box__credit span {
+		font-size: 14px;
+	}
+
+	.dm div:nth-child(1) {
+		background-image: url(./images/mobile/image-gallery-milkbottles.jpg);
+	}
+
+	.dm div:nth-child(2) {
+		background-image: url(./images/mobile/image-gallery-orange.jpg);
+	}
+
+	.dm div:nth-child(3) {
+		background-image: url(./images/mobile/image-gallery-cone.jpg);
+	}
+
+	.dm div:nth-child(4) {
+		background-image: url(./images/mobile/image-gallery-sugar-cubes.jpg);
+	}
+
+	.footer {
+		padding: 50px 0 80px;
+	}
+
+	.footer-heading {
+		font-size: 24px;
+		margin-bottom: 30px;
+	}
+
+	.footer-nav {
+		justify-content: space-between;
+		font-size: 14px;
+		margin-bottom: 50px;
+		width: 100%;
+		padding: 0 10%;
+	}
+
+	.social-media {
+		gap: 20px;
+	}
 }
 
 @keyframes updown {
-  from {
-    top: 46%;
-  }
+	from {
+		top: 46%;
+	}
 
-  to {
-    top: 55%;
-  }
+	to {
+		top: 55%;
+	}
 }
